PHP2 Homework 3 dbPDO - подключение к базе данных через PDO Небольшие правки в рендеринге страницы. Переписал функцию уменшения картинки, чтобы делать пропорциональные размеры.

--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,10 @@ header {
   text-align: center;
 }
 .images {
-  width: 80%;
-  margin: 0 auto;
+  display: flex;
+  width: 100%;
+  margin: auto;
+  align-items: center;
 }
 .add_foto {
   text-align: center;
