PHP2 Homework 5 - refactoring разделили main.js на 2 файла main - для магазина auth - для логина и регистрации
внес соответствующие правки в login.tmpl и register.tmpl

--- a/views/login.tmpl
+++ b/views/login.tmpl
@@ -46,9 +46,9 @@
 </footer>
 
 <script src="../packages/jquery-3.4.1.js"></script>
-<script src="../packages/angular.js"></script>
+{#<script src="../packages/angular.js"></script>#}
 <script src="../packages/bootstrap/js/bootstrap.js"></script>
-<script src="../js/main.js"></script>
+<script src="../js/auth.js"></script>
 
 </body>
 </html>
