--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,6 @@ button:focus{
   outline: none;
 }
 .logo{
-
   text-transform: uppercase;
   font-weight: bold;
 }
@@ -90,7 +89,7 @@ img {
   background-color: white;
   padding: 20px;
   color: black;
-  width: 300px;
+  width: 330px;
 }
 .wrapper {
   display: flex;
@@ -141,12 +140,14 @@ img {
   display: flex;
 }
 .cart-item img{
+  width: 100px;
+  height: 100px;
   align-self: flex-start;
   margin-right: 15px;
 }
 .product-single-price{
   color: #474747;
-  font-size: 0.5em;
+  font-size: 0.75em;
 }
 .product-price{
   margin-left: 30px;
@@ -156,7 +157,7 @@ img {
 }
 .product-quantity {
   margin-top: 15px;
-  font-size: 0.75em;
+  font-size: 1.25em;
 }
 .right-block{
   text-align: right;
